Bug fix: Fixed issue where package cards were not responsive on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ MEDIA QUERIES
   }
 }
 
-@media only screen and (max-device-width: 710px) {
+@media only screen and (max-device-width: 720px) {
   .heading-1 {
     font-size: 6rem;
   }
@@ -1013,12 +1013,16 @@ MEDIA QUERIES
     justify-content: center;
     padding: 0 3rem;
   }
-  .packages__cards {
-    display: flex;
-    row-gap: 3rem;
-  }
   .packages__list-box {
     margin-top: 4rem;
+  }
+}
+
+@media only screen and (max-device-width: 770px) {
+  .packages__cards {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
   }
 }
 
