--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -82,7 +82,7 @@ MEDIA QUERIES
     .heading-2 {font-size: 5.5rem;}
 }
 
-@media only screen and (max-device-width: 710px){
+@media only screen and (max-device-width: 720px){
     .heading-1 {font-size: 6rem;}
 }
 
